--- a/E-Commerce-Front-End/E-Commerce-App/src/app/checkout/checkout.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/checkout/checkout.component.html
@@ -97,7 +97,7 @@
                 <!--firstName-->
                 <div class="md-form ">
                   <input mdbInput type="text" [(ngModel)]="person.firstName" name="firstName" id="firstNameId"
-                    class="form-control" placeholder="Atif">
+                    class="form-control" placeholder="Tizara">
                   <label for="firstNameId" class="">First name</label>
                 </div>
 
@@ -110,7 +110,7 @@
                 <!--lastName-->
                 <div class="md-form">
                   <input mdbInput type="text" [(ngModel)]="person.lastName" name="lastName" id="lastNameId" class="form-control"
-                    placeholder="Aslam">
+                    placeholder="Mart">
                   <label for="lastNameId" class="">Last name</label>
                 </div>
 
