--- a/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
@@ -495,7 +495,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close pull-right" aria-label="Close" (click)="resetFiles();editProductModal.hide()">
-          <span aria-hidden="true">×</span>
+          <i class="fas fa-times"></i>
         </button>
         <h4 class="modal-title w-100" id="myModalLabel">Edit product here !</h4>
       </div>
