--- a/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.html
@@ -78,7 +78,7 @@
       <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold">Send email to us </h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="refreshEmail()">
-          <span aria-hidden="true">&times;</span>
+          <i class="fas fa-times"></i>
         </button>
       </div>
 
@@ -127,3 +127,42 @@
 
 </footer>
 <!--/.Footer-->
+
+
+
+
+
+  <!-- Load Facebook SDK for JavaScript -->
+
+   
+  <div id="fb-root"></div>
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        xfbml            : true,
+        version          : 'v5.0'
+      });
+    };
+  
+    (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+  
+  
+  <div class="fb-customerchat"
+    attribution=setup_tool
+    page_id="110261810396463">
+  </div>
+  
+  
+  
+  
+  
+  
+
+
+
