--- a/E-Commerce-Front-End/E-Commerce-App/src/app/app.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/app.component.html
@@ -1,4 +1,18 @@
+
+
+
+<div class="fb-customerchat"
+page_id="110261810396463" theme_color="#0084ff">
+
+
+</div>
+
+
+
+
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+
+
 
