--- a/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.html
@@ -38,7 +38,7 @@
        for issues to be handled via  mobile/email rather than over the phone.<br><br>
 
 
-       TizaraMart doesn’t use to give a visit to the customer’s premises for any kind of sales meeting. For any kind of sales meeting,
+       TizaraMart doesn&#39;t use to give a visit to the customer&#39;s premises for any kind of sales meeting. For any kind of sales meeting,
         the customer can visit our operation office anytime during our operation office hours. But if anyhow any customer needs to have a chat 
         with us they can chat online.
 
