--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
@@ -1,12 +1,10 @@
-nav{
-  background: #F2FFD3;
-}
+
 .navbar-toggler {
   border-color: rgb(46,80,144);
 } 
 
 .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(46,80,144, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(46,80,144, 0.8)' stroke-width='4' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 
@@ -75,7 +73,12 @@ mat-option{
 
 
 #logoId{
-  width: 150px;
-  height: 70px;
+  width: 160px;
+  height: 90px;
 }
 
+#navText{
+  font-weight: bold;
+  font-family: "calibri", Garamond, 'Comic Sans MS';
+  font-size: 20px;
+}
