--- a/E-Commerce-Front-End/E-Commerce-App/src/app/ourproducts/ourproducts.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/ourproducts/ourproducts.component.html
@@ -8,11 +8,11 @@
     <div class="container">
 
       <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
+      <nav class="navbar navbar-expand-lg lighten-3 mt-3 mb-5">
 
         <!-- Navbar brand -->
         
-<button id="newFilter" type="button" mdbBtn color="light" mdbWavesEffect (click)="newFilter()">New filter</button>
+<button id="newFilter" type="button" mdbBtn color="light" size="sm" mdbWavesEffect (click)="newFilter()"><b id="nfButton">New filter</b></button>
 
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
