--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
@@ -33,7 +33,7 @@
         </li>
 
         <li id="paddingListId" class="nav-item">
-          <a class="nav-link waves-effect"  *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" href="JavaScript:Void(0)" data-toggle="modal" (click)="admin.show()">Admin Section</a>
+          <a id="navText" class="nav-link waves-effect"  *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" href="JavaScript:Void(0)" data-toggle="modal" (click)="admin.show()">Admin Section</a>
         </li>
 
 
