--- a/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
@@ -168,7 +168,7 @@
           <div *ngFor="let p of products | productFilter:category:brand:color:name" class="col-lg-3 col-md-6 mb-4">
 
             <!--Card-->
-            <div class="card  wow lightSpeedIn">
+            <div data-toggle="tooltip" data-placement="top" title="{{p.name}}" class="card  wow lightSpeedIn">
 
 
 
@@ -237,7 +237,7 @@
       <div *ngFor="let p of lowerToUpperProductsByCategory" class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card wow rotateInDownLeft">
+          <div  data-toggle="tooltip" data-placement="top" title="{{p.name}}"  class="card wow rotateInDownLeft">
 
 
 
@@ -300,7 +300,7 @@
       <div *ngFor="let p of upperToLowerProductsByCategory" class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card wow rotateInDownRight">
+          <div data-toggle="tooltip" data-placement="top" title="{{p.name}}"  class="card wow rotateInDownRight">
 
 
 
@@ -363,7 +363,7 @@
       <div *ngFor="let p of lowerToUpperProductsByBrand" class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card wow rotateInUpLeft">
+          <div data-toggle="tooltip" data-placement="top" title="{{p.name}}"  class="card wow rotateInUpLeft">
 
 
 
@@ -428,7 +428,7 @@
       <div *ngFor="let p of upperToLowerProductsByBrand" class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card wow rotateInUpRight">
+          <div data-toggle="tooltip" data-placement="top" title="{{p.name}}"  class="card wow rotateInUpRight">
 
 
 
