--- a/E-Commerce-Front-End/E-Commerce-App/src/app/checkout/checkout.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/checkout/checkout.component.html
@@ -245,8 +245,10 @@
 
 
             <div class="row" *ngIf="paymentForm">
-
-            <b><i>Please complete your payment at first, then fill up the form below. Our payment number is : {{ppNumber}} </i></b>
+            
+            <b>Please complete your payment at first, then fill up the form below.<br> Our payment number is : {{ppNumber}}<br><br> </b>
+            
+            
 
 
 
