--- a/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.html
@@ -44,16 +44,16 @@
 
   <!-- Social icons -->
   <div class="pb-4 text-center">
-    <a id="sicon" href="{{fbLink.fblink}}" target="_blank">
+    <a id="sicon" data-toggle="tooltip" data-placement="top" title="Facebook Link" href="{{fbLink.fblink}}" target="_blank">
       <i class="fab fa-facebook-f mr-3"></i>
     </a>
 
-    <a id="sicon" href="{{twitterLink.twitter}}" target="_blank">
+    <a id="sicon" data-toggle="tooltip" data-placement="top" title="Twitter Link" href="{{twitterLink.twitter}}" target="_blank">
       <i class="fab fa-twitter mr-3"></i>
     </a>
 
-    <a id="sicon" href="JavaScript:Void(0)"  data-toggle="modal" data-target="#emailModal">
-      <i class="fas fa-envelope mr-3"></i>
+    <a id="sicon" data-toggle="tooltip" data-placement="top" title="Send Email" href="JavaScript:Void(0)" >
+      <i  class="fas fa-envelope mr-3" data-toggle="modal" data-target="#emailModal"></i>
     </a>
   </div>
   <!-- Social icons -->
