--- a/E-Commerce-Front-End/E-Commerce-App/src/app/selltous/selltous.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/selltous/selltous.component.html
@@ -9,7 +9,7 @@
           <div *ngFor="let p of tpProducts" class="col-lg-3 col-md-6 mb-4">
 
             <!--Card-->
-            <div class="card">
+            <div data-toggle="tooltip" data-placement="top" title="{{p.name}}" class="card">
 
                  <p id="dateId">Submission Date : {{p.createdDate}}</p>
 
