--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
@@ -30,6 +30,15 @@
   overflow: auto;
 }
 
+#deleteCategory{
+  overflow: auto;
+}
+
+#deleteContacts{
+  overflow: auto;
+}
+
+
 nav.navbar.fixed-top {
   max-height:340px;
   overflow-y:auto;
