--- a/E-Commerce-Front-End/E-Commerce-App/src/app/aboutus/aboutus.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/aboutus/aboutus.component.scss
@@ -2,8 +2,8 @@
     padding-top: 20vh;
 }
 .card-body{
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 30px;
+    padding-right: 30px;
 
 }
 .card-title{
