--- a/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.html
@@ -30,8 +30,10 @@
 
 <hr>
     <!-- Title -->
-    <h5 class="card-title  wow slideInRight"><strong>
-      <b>Important note</b><br><br>
+      
+      <h3 class="card-title"><b>Important note</b></h3>
+      <!-- Text -->
+      <p class="card-text">
 
       All our contact numbers are for sales assistance only. In order to increase efficiency, TizaraMart does not provide a telephone 
       contact method for sales assistance. Based on the nature of problems had by our customers, it is much timelier and more effective and faster
@@ -45,8 +47,8 @@
 
 
 
-    </strong></h5>
-    <!-- Subtitle -->
+      </p>
+    <!-- text -->
    
 
 
