--- a/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/contactus/contactus.component.scss
@@ -3,10 +3,18 @@
 }
 
 .card-title{
-  margin-left: 100px;
- 
+  padding-left: 30px;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
 }
 
+.card-text{
+  padding-left: 30px;
+  padding-right: 30px;
+
+  padding-bottom: 2vh;
+
+}
 #cn{
   padding-top: 100px;
   padding-bottom: 20px;
