--- a/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.scss
@@ -13,3 +13,9 @@ padding-top: 15vh;}
     padding: 20px;
     margin-right: 20px;
 }
+#phnIcon{
+    padding-right: 10px;
+}
+#emailIcon{
+    padding-right: 10px;
+}
